<resources>
    <string name="app_name">天天学车</string>
    <string name="tv_take">拍照</string>
    <string name="tv_cancle">取消</string>
    <string name="tv_pick">从相册选择</string>
    <string name="add_prediction_info">新增预报名信息</string>
    <string name="noadd_prediction_info">暂无历史报名记录</string>
    <string name="nocontact_context_prediction_info">加入到个人通讯录，可长久保存</string>
    <string name="nocontact_prediction_info">暂无个人通讯录</string>
    <string name="myadd_prediction_info">历史预报名信息INFORMATION</string>
    <string name="ok">确定</string>
    <string name="minute_register">立即注册</string>
    <string name="minute_login">立即登录</string>
    <string name="finish">完成</string>
    <string name="ysh_number">账号</string>
    <string name="cancel">取消</string>
    <string name="sdcard_not_enough_space">SD卡没有足够的空间</string>
    <string name="sdcard_unload">SD卡不存在</string>
    <string name="network_error">无法连接到服务器</string>
    <string name="network_timeout">网络连接超时</string>
    <string name="system_error">服务器正忙，请稍后再试</string>
    <string name="loading">加载中&#8230;&#8230;</string>
    <string name="load_failed">加载失败</string>
    <string name="guide_view_begin">立刻体验</string>
    <string name="common_data_loading">加载&#8230;&#8230;</string>
    <string name="common_data_failed">请点击&#160;&#160;&#160;&#160;重新加载</string>
    <string name="submit">提交</string>
    <string name="home_menu_search">搜索内容</string>
    <string name="search_not_null">请输入搜索内容</string>
    <string name="no_search_result">没有搜索到相应的内容</string>
    <string name="search_loading">正在搜索中...</string>
    <string name="no_more_data">所有数据加载完毕</string>
    <string name="no_data">没有数据</string>
    <string name="publish_title">发布</string>
    <string name="publish_info_title">填写信息</string>
    <string name="publish_notes_title">发布须知</string>
    <string name="publish_location_title">定位信息</string>
    <string name="publish_info_right">发布须知</string>
    <string name="publish_notes_right">关闭</string>
    <string name="publish_location_right">确定</string>
    <string name="publish_info_content">需求说明</string>
    <string name="publish_info_content_hint">填写详细的发布需求</string>
    <string name="publish_info_name">标题</string>
    <string name="publish_info_name_hint">填写标题</string>
    <string name="publish_info_date">服务时间</string>
    <string name="publish_info_date_hint">请选择时间</string>
    <string name="publish_info_address">服务地点</string>
    <string name="publish_info_address_tour">旅游地点</string>
    <string name="publish_info_address_training">培训地点</string>
    <string name="publish_info_address_hint">填写详细地址</string>
    <string name="publish_info_people">联系人</string>
    <string name="publish_info_people_hint">输入联系人姓名</string>
    <string name="publish_info_phone">联系电话</string>
    <string name="publish_info_phone_hint">只能填写手机或固定电话</string>
    <string name="publish_info_confirm_bt">发布</string>
    <string name="publish_info_name_toast">请填写标题</string>
    <string name="publish_info_content_toast">请填写详细的发布需求</string>
    <string name="publish_info_date_toast">请选择时间</string>
    <string name="publish_info_address_toast">请填写详细地址</string>
    <string name="publish_info_date_check_toast">时间不能小于当前时间</string>
    <string name="publish_info_people_toast">请输入联系人姓名</string>
    <string name="publish_info_phone_toast">请填写手机号码或固定电话</string>
    <string name="publish_info_phone_check_toast">请输入正确的手机号码或固定电话</string>
    <string name="publish_info_success_toast">发布信息成功,请等待后台审核</string>
    <string name="near_title">附近</string>
    <string name="near_locating">正在定位&#8230;</string>
    <string name="near_location_failure">无法定位当前位置,请点击重试</string>
    <string name="near_location_address_null">当前没有附近位置的数据，请先定位</string>
    <string name="near_shop_no_limit">不限</string>
    <string name="near_shop_filter">筛选</string>
    <string name="near_shop_keywords_null_toast">请输入关键字</string>
    <string name="near_class">班级</string>
    <string name="contact_ok">确定</string>
    <string name="contact_all_select">全选</string>
    <string name="near_grade_statistics">成绩统计</string>
    <string name="near_high_one">高一年级考试</string>
    <string name="near_next_semester">2015年下学期</string>
    <string name="near_on_semester">2015年上学期</string>
    <string name="near_teacher_comment">老师评语</string>
    <string name="near_my">我的</string>
    <string name="near_help_add">添加</string>
    <string name="mail_content">班主任（语文老师）</string>
    <string name="mail_name">李晨羲</string>
    <string name="grade_end">期末考试</string>
    <string name="grade_teacher_comment_end">期末考试:</string>
    <string name="prediction_name">张晓伟</string>
    <string name="prediction_name_id">预报名号</string>
    <string name="prediction_name_id_content">4574583</string>
    <string name="prediction_date">4月23日</string>
    <string name="prediction_date_state">审核中</string>
    <string name="grade_chinses">95</string>
    <string name="grade_total">272</string>
    <string name="grade_english">88</string>
    <string name="grade_math">89</string>
    <string name="chinese">语文</string>
    <string name="english">英语</string>
    <string name="math">数学</string>
    <string name="total">总分</string>
    <string name="mp3_play_list">播放列表</string>
    <string name="mp3_info">节目介绍</string>
    <string name="mp3_info_speaker">姓名:</string>
    <string name="mp3_info_popularity">简介:</string>
    <string name="mp3_info_num">集数:</string>
    <string name="mp3_info_last_update">最后更新:</string>
    <string name="mp3_info_introduce">详细介绍</string>
    <string name="category_info_introduce">栏目介绍</string>
    <string name="compere_info_introduce">主持人介绍</string>
    <string name="speaker_noname">佚名</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="m00_status_download_failed">下载失败。</string>
    <string name="m00_down_notifycation_down_done">下载完成。</string>
    <string name="m00_down_notifycation_down">下载中......</string>
    <string name="m00_new_task_added">添加一个下载任务。</string>
    <string name="pull_up_refresh_pull_label">上拉加载更多&#8230;</string>
    <string name="pull_up_refresh_release_label">松开加载&#8230;</string>
    <string name="pull_to_refresh_pull_label">下拉刷新&#8230;</string>
    <string name="pull_to_refresh_release_label">松开刷新&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">加载中&#8230;</string>
    <string name="pull_to_refresh_tap_label">点击刷新&#8230;</string>
    <string name="pull_to_refresh_from_bottom_pull_label">上拉加载更多&#8230;</string>
    <string name="pull_to_refresh_from_bottom_release_label">松开加载&#8230;</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="l00_share">分享</string>
    <string name="l00_share_sina">新浪微博</string>
    <string name="l00_share_tencent">腾讯微博</string>
    <string name="l00_share_content">应用很不错哦，亲！赞一个。。。</string>
    <string name="l00_share_success">分享成功</string>
    <string name="l00_share_failure">分享失败</string>
    <string name="l00_share_oauth_success">认证成功</string>
    <string name="l00_share_oauth_failure">认证失败</string>
    <string name="l00_share_bind">绑定</string>
    <string name="l00_share_unbind">解绑</string>
    <string name="l00_status_download_finish">下载成功</string>
    <string name="l00_app_download_failed">下载失败</string>
    <string name="l00_app_download_url_not_valid">无效的下载地址</string>
    <string name="l00_app_download_sc_not_found">下载资源不存在</string>
    <string name="l00_downloading_delete_success">取消下载成功</string>
    <string name="download_mp3_is_downloading_toast">该歌曲正在下载!</string>
    <string name="download_mp3_is_downloaded_toast">该歌曲已经下载!</string>
    <string name="download_status_downloaded">已下载</string>
    <string name="download_status_continue">点击继续下载</string>
    <string name="download_status_wait">等待下载</string>
    <string name="download_status_fail">下载失败,点击重新下载</string>
    <string name="set_title">详细设置</string>
    <string name="time_stop">定时停止</string>
    <string name="download_manager">下载管理</string>
    <string name="my_fav">我的收藏</string>
    <string name="about_us">关于我们</string>
    <string name="version_update">版本更新</string>
    <string name="set_share_account">绑定账号</string>
    <string name="set_version_update_latest_toast">当前版本已是最新版本！</string>
    <string name="set_clear_cache_toast">清空缓存成功!</string>
    <string name="time_10">10分钟后</string>
    <string name="time_20">20分钟后</string>
    <string name="time_30">30分钟后</string>
    <string name="time_60">60分钟后</string>
    <string name="all_selected">全选</string>
    <string name="myfavorite">我的收藏</string>
    <string name="manager">管理</string>
    <string name="song_is_fav">此歌曲已经收藏</string>
    <string name="song_fav_success">收藏成功</string>
    <string name="song_cancel_fav_success">取消收藏成功</string>
    <string name="choose_song">请选择歌曲</string>
    <string name="pop">提示</string>
    <string name="delete_song_pop">确认要删除这些歌曲吗？</string>
    <string name="share_msg1">我正在使用青柠FM收听：</string>
    <string name="share_msg2">等节目，还有更多优质节目等你去发现，大家赶紧使用青柠FM体验吧！</string>
    <string name="share_msg3">，还有更多优质节目等你去发现，大家赶紧使用青柠FM体验吧！</string>
    <string name="left_flag">《</string>
    <string name="right_flag">》</string>
    <string name="fav_cancel">确认取消收藏吗？</string>
    <string name="stop_msg">定时停止时间到了，还要继续播放吗？</string>
    <string name="go_on">继续</string>
    <string name="close">关闭</string>
    <string name="update_dialog_title">新版发布</string>
    <string name="update_dialog_ok">现在升级</string>
    <string name="update_dialog_cancel">下次再说</string>
    <string name="update_client_fail">更新客户端失败。</string>
    <string name="update_downloading_percent">已下载  %1$s</string>
    <string name="update_client_title">更新客户端&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="loadMP3">正在加载音乐,请您稍候...</string>
    <string name="lrc_load_fail">暂无歌词</string>
    <string name="mode_list_repeat">列表循环</string>
    <string name="mode_single_repeat">单曲循环</string>
    <string name="mode_random_play">随机播放</string>
    <string name="mode_list_play">顺序播放</string>
    <string name="music_default_time">00:00</string>
    <string name="share_title">分享</string>
    <string name="share_sina">新浪微博</string>
    <string name="share_tencent">腾讯微博</string>
    <string name="share_wechat">微信好友</string>
    <string name="share_friend_circle">微信朋友圈</string>
    <string name="share_friend_circle_not_support">抱歉！您的微信版本不支持分享到朋友圈</string>
    <string name="share_oauth_success">认证成功</string>
    <string name="share_oauth_failure">认证失败</string>
    <string name="ysh_new_password">新密码</string>
    <string name="ysh_telphone_hint2">输入手机号</string>
    <string name="ysh_register_password_rename_hint">再次输入密码</string>
    <string name="ysh_validate_number">验证码</string>
    <string name="ysh_validate_number_hint">输入验证码</string>
    <string name="ysh_get_validate_number">获取验证码</string>
    <string name="ysh_class_home_chinese_title">语文作业</string>
    <string name="ysh_class_home_publisher">发布者：</string>
    <string name="ysh_class_home_publisher_text">李晨曦（班主任）</string>
    <string name="ysh_class_home_publisher_time">2014-05-04</string>
    <string name="ysh_feedback_message">欢迎提出宝贵的意见和建议，您留下的每个字都将用来改善我们的软件</string>
    <string name="ysh_feedback_hint">请输入您的意见或者建议。问学将与你的孩子共同成长......</string>
    <string name="ysh_feedback_submit">提交</string>
    <string name="login_regist">注册</string>
    <string name="login_title">登陆</string>
    <string name="forgetpwd_title">忘记密码</string>
    <string name="hint_username">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="foget_pwd">忘记密码，如何找回？</string>
    <string name="need_register">还没账号，赶紧注册</string>
    <string name="next_step">下一步</string>
</resources>