<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_gray_bg"
    android:orientation="vertical" >

    <include layout="@layout/wx_common_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:text="@string/ysh_feedback_message"
        android:textColor="@color/ysh_business_979797_color"
        android:textSize="16sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/feedback_edittext"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:gravity="top"
        android:hint="@string/ysh_feedback_hint"
        android:padding="10dip"
        android:textSize="16sp" />

    <Button
        android:id="@+id/feedback_submit"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="40dip"
        android:background="#35C486"
        android:text="@string/ysh_feedback_submit"
        android:textColor="@color/white_color"
        android:textSize="18sp" />

</LinearLayout>