<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="70dp"
    android:orientation="vertical" 
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="#FFFFFF"
    >
    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="fill_parent"
    	android:layout_height="40dp"
    	android:orientation="horizontal"
    	android:gravity="center_vertical"
        >
        <ImageView 
            android:id="@+id/title_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/img_class_home_icon"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ysh_class_home_chinese_title"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"
            />
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_below="@id/ll_title"
        android:layout_width="fill_parent"
    	android:layout_height="30dp"
    	android:orientation="horizontal"
    	android:gravity="center_vertical"
    	android:layout_marginLeft="20dp"
        >
        <TextView 
            android:id="@+id/tv_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/ysh_class_home_publisher"
            android:textColor="@color/ysh_update_c1c1c1_color"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/tv_publisher_text"
            android:layout_toRightOf="@id/tv_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ysh_class_home_publisher_text"
            android:layout_marginLeft="5dp"
            android:textColor="@color/ysh_update_c1c1c1_color"
            android:textSize="14sp"
            />
         <TextView
            android:id="@+id/tv_publisher_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ysh_class_home_publisher_time"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:textColor="@color/ysh_update_c1c1c1_color"
            android:textSize="14sp"
            />
    </RelativeLayout>

</RelativeLayout>