<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_gray_bg"
    android:orientation="vertical" >

    <include layout="@layout/layout_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/common_white_bg"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="65dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:gravity="left"
                    android:text="@string/ysh_number"
                    android:textColor="@color/common_title_454545_color"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="1dip"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dip"
                    android:layout_marginLeft="5dip"
                    android:layout_marginTop="15dip"
                    android:background="@drawable/ysh_vertical_line" />

                <EditText
                    android:id="@+id/telphone_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="@android:color/transparent"
                    android:hint="@string/ysh_telphone_hint2"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginTop="1dip"
                android:background="@drawable/common_white_bg"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="65dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:gravity="left"
                    android:text="@string/ysh_validate_number"
                    android:textColor="@color/common_title_454545_color"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="1dip"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dip"
                    android:layout_marginLeft="5dip"
                    android:layout_marginTop="15dip"
                    android:background="@drawable/ysh_vertical_line" />

                <EditText
                    android:id="@+id/code_edittext"
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="@android:color/transparent"
                    android:hint="@string/ysh_validate_number_hint"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/code_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dip"
                        android:text="@string/ysh_get_validate_number"
                        android:textColor="@color/green_35C285"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/common_white_bg"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="65dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:gravity="left"
                    android:text="@string/ysh_new_password"
                    android:textColor="@color/common_title_454545_color"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="1dip"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dip"
                    android:layout_marginLeft="5dip"
                    android:layout_marginTop="15dip"
                    android:background="@drawable/ysh_vertical_line" />

                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="@android:color/transparent"
                    android:hint="@string/ysh_register_password_rename_hint"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="80dip"
                android:background="@color/ysh_8C8C8C_color"
                android:text="@string/login_regist"
                android:textColor="@color/title_color"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>