<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="80dp"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
     >

    <RelativeLayout
        android:id="@+id/rl_item"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF" 
        android:layout_gravity="center_vertical"
        >

        <TextView
            android:id="@+id/tv_prediction_name"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/prediction_name"
            android:textColor="@color/black_color"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/tv_prediction_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dip"
                android:text="@string/prediction_date"
                android:textColor="@color/ysh_757575_color"
                android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_item"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF" >

        <LinearLayout
            android:id="@+id/ll_id_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_id_icon"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dip"
                android:src="@drawable/img_prediction_id_icon" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ll_id_icon"
            android:gravity="center_vertical"
            android:text="@string/prediction_name_id"
            android:textColor="@color/ysh_757575_color"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/tv_id_content"
            android:layout_toRightOf="@id/tv_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/prediction_name_id_content"
            android:textColor="@color/ysh_757575_color"
            android:textSize="14sp" 
            android:layout_marginLeft="10dp"
            />

        <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
             >

            <TextView
                android:id="@+id/tv_id_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dip"
                android:text="@string/prediction_date_state"
                android:textColor="@color/ysh_757575_color"
                android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>