<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/login_title_color"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/login_title"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_draw"
                android:hint="@string/hint_username"
                android:paddingBottom="10dip"
                android:paddingLeft="25dp"
                android:paddingTop="10dip" />

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignBottom="@+id/edit_username"
                android:layout_alignLeft="@+id/edit_username"
                android:layout_alignTop="@+id/edit_username"
                android:contentDescription="usernameimage"
                android:paddingLeft="5dp"
                android:src="@drawable/username" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_draw"
                android:hint="@string/hint_password"
                android:paddingBottom="10dip"
                android:paddingLeft="25dp"
                android:paddingTop="10dip" />

            <ImageView
                android:id="@+id/img_pwd"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignBottom="@+id/edit_password"
                android:layout_alignLeft="@+id/edit_password"
                android:layout_alignTop="@+id/edit_password"
                android:contentDescription="pwdimage"
                android:paddingLeft="5dp"
                android:src="@drawable/password" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/login_btn_color"
        android:gravity="center"
        android:text="@string/login_title"
        android:textColor="@color/login_title_color"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_draw"
            android:paddingBottom="10dip"
            android:paddingLeft="10dp"
            android:paddingTop="10dip"
            android:text="@string/foget_pwd" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:src="@drawable/right" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_draw"
            android:paddingBottom="10dip"
            android:paddingLeft="10dp"
            android:paddingTop="10dip"
            android:text="@string/need_register" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:src="@drawable/right" />
    </RelativeLayout>

</LinearLayout>